--- a/UIComponents/dashboardBuilder/css/dashboard.less
+++ b/UIComponents/dashboardBuilder/css/dashboard.less
@@ -628,7 +628,12 @@ height: auto !important;
 .gridster-mobile .gauge {height: 50%!important;width: 100%;}
 .gridster-mobile scriptr-thermometer>div:first-child {height: 45%;margin-bottom: -22px;}
 
-.gridster-mobile .ag-layout-normal .ag-root {height: 50%;}
+.gridster-mobile .ag-layout-normal .ag-root {
+	height: auto;
+	display: inline-block;
+    width: 100%;
+}
+
 .gridster-mobile .ag-bl-full-height , .gridster-mobile .ag-layout-normal, .gridster-mobile .ag-bl-full-height-center {
     height: auto!important;
 }
@@ -648,9 +653,16 @@ height: auto !important;
 	height: calc(100% - 100px)!important;
 }
 
-.gridster-mobile .plotly-chart-wrapper.with-legend {width: 100%!important;height: 40%!important;}
+.gridster-mobile .plotly-chart-wrapper.with-legend {width: 100%!important;height: auto!important;}
 .gridster-mobile .plotly-chart-legend {height: auto;width: 100%;float: none;text-align: left;margin: 10px;}
-.gridster-mobile .plotly-chart-dimension {height: 100%;}
+.gridster-mobile .plotly-chart-dimension {height: auto;}
+.gridster-mobile .plotly-chart-dimension .js-plotly-plot .plotly div {height: auto!important;}
+.gridster-mobile .plotly-chart-dimension .js-plotly-plot .plotly svg {height: 35%;}
+.gridster-mobile .plotly-chart-dimension .js-plotly-plot .plotly svg .outer-group {transform: translate(0,0);}
+rect {
+  /* doesn't work in IE/ older Edge */
+  transform: translate(295px, 115px);
+}
 
 .gridster-mobile .accelerometer-wrapper {height: 50%;}
 .gridster-mobile .speedometer-wrapper {height: 50%;}
@@ -660,6 +672,11 @@ height: auto !important;
 .gridster-mobile .morris-chart-wrapper.with-legend {width: 100%;float: none;}
 .gridster-mobile .morris-chart-legend {width: auto;float: none;margin: 20px;height: auto;}
 
+.gridster-mobile .ag-bootstrap {height: auto!important;}
+.gridster-mobile .ag-bootstrap .ag-body {height: auto!important;position: relative;top: auto!important;}
+.gridster-mobile .ag-bootstrap .ag-header {position: relative;}
+.gridster-mobile .ag-layout-normal .ag-body-viewport-wrapper {height: auto;}
+.gridster-mobile .ag-layout-normal .ag-body-viewport {height: auto;}
 
 .sub-tabs .nav-tabs {
   	padding: 0;
